--- a/자바스크립트_라이브러리/Day02/lastquiz/lastquiz.html
+++ b/자바스크립트_라이브러리/Day02/lastquiz/lastquiz.html
@@ -38,6 +38,7 @@
           src="https://i.namu.wiki/i/GqYDIzPoEl1aUpwXZd1PugOc9gkfa4CvrtWzcDp2gSbKV29Rv-IJfXy6vtLJnq3rg7QFZ6AO0BvQyQhENryOeg.webp"
           alt=""
         />
+        <video src=""></video>
       </figure>
     </section>
   </body>
